# neuralops

./: Cargo.toml  Makefile  build.rs
extkernels/: activate.c  batchnorm.c  conv.c  interpolate.c  pool.c
gomp_kernels/: Cargo.toml  activate.c  build.rs  lib.rs
iomp_kernels/: Cargo.toml  build.rs
kernels/: Cargo.toml  activate.c  build.rs  lib.h  lib.rs  pool.c
kernels/src/: activate.c  batchnorm.c  image.c
omp_kernels/: Cargo.toml  activate.c  build.rs  conv.c  image.c  interpolate.c  lib.rs  pool.c  src
src/: affine.rs  archs.rs  archs_mkl.rs  checkpoint.rs  class_loss.rs  common.rs  conv.rs  conv_gemm.rs  conv_mkl.rs  conv_mkldnn.rs  conv_nnpack.rs  deconv.rs  dropout.rs  dummy.rs  graph.rs  input.rs  join.rs  lib.rs  loss.rs  mux.rs  ops.rs  param.rs  pool.rs  pool_mkldnn.rs  prelude.rs  regress_loss.rs  seq.rs  softmax.rs  split.rs  util.rs
src/data/: cifar.rs  jpeg.rs  mnist.rs  mod.rs  ndarray.rs  queue.rs  varraydb.rs
src/kernels/: activate.rs  batchnorm.rs  conv.rs  ffi.rs  image.rs  interpolate.rs  mod.rs  pool.rs  softmax.rs
tools/: calc-mean-cifar10.rs  shsync-train-cifar10.rs  train-cifar10-new.rs  train-cifar10-sgd.rs  train-cifar10.rs  train-mnist-new.rs  train-mnist.rs
