[package]
name = "neuralops"
version = "0.1.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
#build = "build.rs"

#[features]
#default = ["nnpack"]
#mkl = ["mkl_dnn", "nnpack"]

[lib]
name = "neuralops"
path = "src/lib.rs"

#[[bin]]
#name = "train-mnist"
#path = "tools/train-mnist.rs"

[[bin]]
name = "train-mnist-new"
path = "tools/train-mnist-new.rs"

#[[bin]]
#name = "calc-mean-cifar10"
#path = "tools/calc-mean-cifar10.rs"

#[[bin]]
#name = "train-cifar10"
#path = "tools/train-cifar10.rs"

[[bin]]
name = "train-cifar10-new"
path = "tools/train-cifar10-new.rs"

#[[bin]]
#name = "shsync-train-cifar10"
#path = "tools/shsync-train-cifar10.rs"

#[[bin]]
#name = "bench-typemap"
#path = "tools/bench-typemap.rs"

[dependencies]
neuralops_kernels = { path = "kernels" }
byteorder = "*"
float = "*"
libc = "*"
rand = "*"
densearray = { path = "../libdensearray" }
iter_utils = { path = "../libiter_utils" }
#mkl_dnn = { path = "../libmkl_dnn", optional = true }
#nnpack = { path = "../libnnpack", optional = true }
operator = { path = "../liboperator" }
rng = { path = "../librng" }
sharedmem = { path = "../libsharedmem" }
stb_image = { path = "../rust-stb-image" }
turbojpeg = { path = "../libturbojpeg" }
typemap = { path = "../rust-typemap" }
varraydb = { path = "../varraydb" }
