[package]
name = "neuralops"
version = "0.1.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
build = "build.rs"

[features]
default = []
mkldnn = ["mkl_dnn"]
iomp = ["densearray/mkl_parallel"]
knl = ["densearray/mkl_parallel", "densearray/knl"]

[lib]
name = "neuralops"
path = "src/lib.rs"

#[[bin]]
#name = "train-mnist"
#path = "tools/train-mnist.rs"

#[[bin]]
#name = "train-mnist-new"
#path = "tools/train-mnist-new.rs"

#[[bin]]
#name = "calc-mean-cifar10"
#path = "tools/calc-mean-cifar10.rs"

#[[bin]]
#name = "train-cifar10"
#path = "tools/train-cifar10.rs"

#[[bin]]
#name = "train-cifar10-new"
#path = "tools/train-cifar10-new.rs"

[[bin]]
name = "train-cifar10-sgd"
path = "tools/train-cifar10-sgd.rs"

#[[bin]]
#name = "shsync-train-cifar10"
#path = "tools/shsync-train-cifar10.rs"

#[[bin]]
#name = "bench-typemap"
#path = "tools/bench-typemap.rs"

[build-dependencies]
gcc = "*"
walkdir = "*"

[dependencies]
#neuralops_kernels = { path = "kernels" }
#neuralops_omp_kernels = { path = "omp_kernels", optional = true }
libc = "*"
rand = "*"
byteorder = "*"
densearray = "^0.1"
float = "^0.1"
iter_utils = "^0.1"
mkl_dnn = { path = "../libmkl_dnn", optional = true }
#nnpack = { path = "../libnnpack", optional = true }
operator = { path = "../liboperator" }
#rayon = "*"
rng = "^0.1"
sharedmem = "^0.1"
stb_image = { path = "../rust-stb-image" }
turbojpeg = { path = "../libturbojpeg" }
varraydb = { path = "../varraydb" }

[replace]
"densearray:0.1.1" = { path = "../libdensearray" }
